--- a/logrotate.conf
+++ b/logrotate.conf
@@ -6,9 +6,10 @@ daily
 #    delaycompress
 missingok
 notifempty
-rotate 5
+rotate 10
 sharedscripts
-size 10M
+daily
+#size 10M
 postrotate
   runuser -u headscale -- podman kill --signal="USR1" traefik >/dev/null 2>&1
 endscript
