--- a/headscale-srv/volume_files/traefik/config/traefik.yaml
+++ b/headscale-srv/volume_files/traefik/config/traefik.yaml
@@ -1,5 +1,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
-
+ping:
+  entryPoint: ping-ep
 api:
   dashboard: true
 log:
@@ -34,6 +35,8 @@ accessLog:
         X-Forwarded-For: keep
         X-Real-Ip: keep
 entryPoints:
+  ping-ep:
+    address: ":8085"
   web:
     address: ":80"
     http:
